--- a/main.css
+++ b/main.css
@@ -21,12 +21,12 @@ body {
 }
 .text {
     font-family: 'Roboto Slab', serif;
-    font-size: 20px;
+    font-size: 22px;
 }
 
 
 #header {
-    margin-bottom: 40px;
+    margin-bottom: 80px;
 }
 .img-circle {
     border-radius: 50%;
@@ -83,12 +83,12 @@ h1:hover{
 h2 {
     font-family: 'Cuprum', sans-serif;
     font-size: 36px;
-    padding-top: 20px;
+    padding-top: 60px;
 }
 
 
 #featured {
-    margin-bottom: 30px;
+    margin-bottom: 80px;
 }
 .category {
     float: left;
@@ -131,7 +131,10 @@ h2 {
 
 
 footer {
-    margin-top: 30px;
+    margin-top: 80px;
+}
+footer .text {
+    font-size: 16px;
 }
 
 }
